--- a/Copy_Example.env
+++ b/Copy_Example.env
@@ -1,4 +1,4 @@
-VERSION=["1.2.0"]
+VERSION=["Beta-1.4.0"]
 
 DISCORD_TOKEN=Discord Bot Token.
 ADMIN_USERS=["#Your discord username or usernames","you can define another user here or as many as you'd like"]
