--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore .env file containing sensitive information
 .env
 *.db
-./node_modules/*
+/node_modules/
 package.json
 package-lock.json
 .gitignore
